[gd_scene load_steps=16 format=2]

[ext_resource path="res://Cenas/Transições/Transition2.gd" type="Script" id=1]
[ext_resource path="res://Public/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Cenas/Utilitarios/PopupPause.tscn" type="PackedScene" id=3]
[ext_resource path="res://Public/roadmap.png" type="Texture" id=4]
[ext_resource path="res://Cenas/Utilitarios/popupDialogo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cenas/Utilitarios/Hint/Hint.tscn" type="PackedScene" id=6]
[ext_resource path="res://Personagens/Jose/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Cenas/Fases/Fase1/machado.tscn" type="PackedScene" id=8]
[ext_resource path="res://Public/Utilitarios/frame.png" type="Texture" id=9]
[ext_resource path="res://Public/Utilitarios/lightFrame.png" type="Texture" id=10]
[ext_resource path="res://Public/Sounds-effects/birds-19624.mp3" type="AudioStream" id=11]
[ext_resource path="res://Cenas/Utilitarios/Tilesets/Area1/Tileset1.tres" type="TileSet" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.5, 36 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 36.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="grass" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -1, 0, 0, -65536, 0, 3, -65535, 0, 3, -65534, 0, 4, -65533, 0, 2, -65532, 0, 4, -65531, 0, 4, -65530, 0, 3, -65529, 0, 1, -65528, 0, 196610, -65527, 0, 196610, -65526, 0, 3, -65525, 0, 4, -65524, 0, 3, -65523, 0, 4, -65522, 0, 3, -65521, 0, 1, -65520, 0, 3, -65519, 0, 1, -65518, 0, 4, -65517, 0, 3, -65516, 0, 3, -65515, 0, 2, -65514, 0, 196610, -65513, 0, 2, -65512, 0, 2, -65511, 0, 3, -65510, 0, 1, -65509, 0, 2, -65508, 0, 4, -65507, 0, 196610, -65506, 0, 4, -65505, 0, 1, -65504, 0, 4, -65503, 0, 4, -65502, 0, 2, -65501, 0, 2, -65500, 0, 4, -65499, 0, 196610, -65498, 0, 5, 65535, 0, 131072, 0, 0, 131076, 1, 0, 131076, 2, 0, 196612, 3, 0, 196612, 4, 0, 131076, 5, 0, 131076, 6, 0, 131076, 7, 0, 65540, 8, 0, 65540, 9, 0, 65540, 10, 0, 131076, 11, 0, 65540, 12, 0, 65540, 13, 0, 196612, 14, 0, 196612, 15, 0, 131076, 16, 0, 65540, 17, 0, 196612, 18, 0, 196612, 19, 0, 65540, 20, 0, 131076, 21, 0, 196612, 22, 0, 196612, 23, 0, 131076, 24, 0, 65540, 25, 0, 196612, 26, 0, 131076, 27, 0, 196612, 28, 0, 131076, 29, 0, 196612, 30, 0, 131076, 31, 0, 65540, 32, 0, 65540, 33, 0, 131076, 34, 0, 131076, 35, 0, 196612, 36, 0, 131076, 37, 0, 65540, 38, 0, 131077, 131071, 0, 131075, 65536, 0, 131076, 65537, 0, 131076, 65538, 0, 131076, 65539, 0, 196612, 65540, 0, 65540, 65541, 0, 196612, 65542, 0, 196612, 65543, 0, 65540, 65544, 0, 65540, 65545, 0, 196612, 65546, 0, 131076, 65547, 0, 65540, 65548, 0, 131076, 65549, 0, 65540, 65550, 0, 65540, 65551, 0, 131076, 65552, 0, 131076, 65553, 0, 131076, 65554, 0, 131076, 65555, 0, 131076, 65556, 0, 196612, 65557, 0, 65540, 65558, 0, 131076, 65559, 0, 196612, 65560, 0, 196612, 65561, 0, 196612, 65562, 0, 65540, 65563, 0, 65540, 65564, 0, 196612, 65565, 0, 196612, 65566, 0, 65540, 65567, 0, 196612, 65568, 0, 65540, 65569, 0, 65540, 65570, 0, 131076, 65571, 0, 65540, 65572, 0, 131076, 65573, 0, 196612, 65574, 0, 196613, 196607, 0, 65536, 131072, 0, 131076, 131073, 0, 65540, 131074, 0, 131076, 131075, 0, 131076, 131076, 0, 196612, 131077, 0, 196612, 131078, 0, 196612, 131079, 0, 65540, 131080, 0, 196612, 131081, 0, 65540, 131082, 0, 196612, 131083, 0, 65540, 131084, 0, 131076, 131085, 0, 196612, 131086, 0, 131076, 131087, 0, 65540, 131088, 0, 131076, 131089, 0, 65540, 131090, 0, 131076, 131091, 0, 196612, 131092, 0, 65540, 131093, 0, 65540, 131094, 0, 196612, 131095, 0, 65540, 131096, 0, 65540, 131097, 0, 131076, 131098, 0, 65540, 131099, 0, 65540, 131100, 0, 131076, 131101, 0, 196612, 131102, 0, 131076, 131103, 0, 65540, 131104, 0, 131076, 131105, 0, 196612, 131106, 0, 65540, 131107, 0, 65540, 131108, 0, 196612, 131109, 0, 196612, 131110, 0, 65541, 262143, 0, 65536, 196608, 0, 196612, 196609, 0, 196612, 196610, 0, 196612, 196611, 0, 65540, 196612, 0, 65540, 196613, 0, 196612, 196614, 0, 131076, 196615, 0, 196612, 196616, 0, 196612, 196617, 0, 196612, 196618, 0, 65540, 196619, 0, 65540, 196620, 0, 65540, 196621, 0, 65540, 196622, 0, 196612, 196623, 0, 196612, 196624, 0, 131076, 196625, 0, 65540, 196626, 0, 65540, 196627, 0, 196612, 196628, 0, 65540, 196629, 0, 196612, 196630, 0, 196612, 196631, 0, 65540, 196632, 0, 131076, 196633, 0, 65540, 196634, 0, 196612, 196635, 0, 196612, 196636, 0, 196612, 196637, 0, 65540, 196638, 0, 65540, 196639, 0, 65540, 196640, 0, 131076, 196641, 0, 131076, 196642, 0, 65540, 196643, 0, 65540, 196644, 0, 196612, 196645, 0, 131076, 196646, 0, 131077, 327679, 0, 65536, 262144, 0, 196612, 262145, 0, 65540, 262146, 0, 131076, 262147, 0, 196612, 262148, 0, 131076, 262149, 0, 131076, 262150, 0, 65540, 262151, 0, 196612, 262152, 0, 65540, 262153, 0, 131076, 262154, 0, 196612, 262155, 0, 196612, 262156, 0, 65540, 262157, 0, 196612, 262158, 0, 65540, 262159, 0, 131076, 262160, 0, 196612, 262161, 0, 196612, 262162, 0, 131076, 262163, 0, 196612, 262164, 0, 196612, 262165, 0, 65540, 262166, 0, 131076, 262167, 0, 196612, 262168, 0, 131076, 262169, 0, 131076, 262170, 0, 196612, 262171, 0, 131076, 262172, 0, 131076, 262173, 0, 131076, 262174, 0, 131076, 262175, 0, 196612, 262176, 0, 196612, 262177, 0, 65540, 262178, 0, 131076, 262179, 0, 131076, 262180, 0, 65540, 262181, 0, 131076, 262182, 0, 131077, 393215, 0, 131072, 327680, 0, 65540, 327681, 0, 65540, 327682, 0, 131076, 327683, 0, 196612, 327684, 0, 196612, 327685, 0, 131076, 327686, 0, 65540, 327687, 0, 65540, 327688, 0, 131076, 327689, 0, 196612, 327690, 0, 65540, 327691, 0, 131076, 327692, 0, 65540, 327693, 0, 131076, 327694, 0, 65540, 327695, 0, 65540, 327696, 0, 131076, 327697, 0, 131076, 327698, 0, 196612, 327699, 0, 131076, 327700, 0, 65540, 327701, 0, 65540, 327702, 0, 131076, 327703, 0, 196612, 327704, 0, 65540, 327705, 0, 65540, 327706, 0, 131076, 327707, 0, 196612, 327708, 0, 196612, 327709, 0, 131076, 327710, 0, 196612, 327711, 0, 65540, 327712, 0, 131076, 327713, 0, 65540, 327714, 0, 131076, 327715, 0, 196612, 327716, 0, 65540, 327717, 0, 196612, 327718, 0, 65541, 458751, 0, 131075, 393216, 0, 65540, 393217, 0, 196612, 393218, 0, 196612, 393219, 0, 131076, 393220, 0, 65540, 393221, 0, 131076, 393222, 0, 196612, 393223, 0, 131076, 393224, 0, 65540, 393225, 0, 65540, 393226, 0, 131076, 393227, 0, 131076, 393228, 0, 65540, 393229, 0, 131076, 393230, 0, 131076, 393231, 0, 65540, 393232, 0, 196612, 393233, 0, 196612, 393234, 0, 131076, 393235, 0, 196612, 393236, 0, 196612, 393237, 0, 65540, 393238, 0, 196612, 393239, 0, 131076, 393240, 0, 65540, 393241, 0, 65540, 393242, 0, 131076, 393243, 0, 131076, 393244, 0, 131076, 393245, 0, 131076, 393246, 0, 196612, 393247, 0, 65540, 393248, 0, 65540, 393249, 0, 131076, 393250, 0, 65540, 393251, 0, 65540, 393252, 0, 65540, 393253, 0, 65540, 393254, 0, 65541, 524287, 0, 196608, 458752, 0, 196612, 458753, 0, 196612, 458754, 0, 131076, 458755, 0, 196612, 458756, 0, 196612, 458757, 0, 65540, 458758, 0, 131076, 458759, 0, 196612, 458760, 0, 65540, 458761, 0, 65540, 458762, 0, 196612, 458763, 0, 196612, 458764, 0, 65540, 458765, 0, 65540, 458766, 0, 65540, 458767, 0, 131076, 458768, 0, 65540, 458769, 0, 196612, 458770, 0, 131076, 458771, 0, 196612, 458772, 0, 131076, 458773, 0, 131076, 458774, 0, 196612, 458775, 0, 131076, 458776, 0, 196612, 458777, 0, 65540, 458778, 0, 65540, 458779, 0, 131076, 458780, 0, 65540, 458781, 0, 131076, 458782, 0, 65540, 458783, 0, 131076, 458784, 0, 65540, 458785, 0, 65540, 458786, 0, 65540, 458787, 0, 65540, 458788, 0, 131076, 458789, 0, 65540, 458790, 0, 131073, 589823, 0, 131072, 524288, 0, 131076, 524289, 0, 131076, 524290, 0, 65540, 524291, 0, 196612, 524292, 0, 131076, 524293, 0, 65540, 524294, 0, 65540, 524295, 0, 65540, 524296, 0, 131076, 524297, 0, 131076, 524298, 0, 196612, 524299, 0, 196612, 524300, 0, 65540, 524301, 0, 196612, 524302, 0, 196612, 524303, 0, 196612, 524304, 0, 196612, 524305, 0, 196612, 524306, 0, 131076, 524307, 0, 196612, 524308, 0, 196612, 524309, 0, 196612, 524310, 0, 131076, 524311, 0, 65540, 524312, 0, 196612, 524313, 0, 196612, 524314, 0, 196612, 524315, 0, 65540, 524316, 0, 65540, 524317, 0, 196612, 524318, 0, 65540, 524319, 0, 65540, 524320, 0, 65540, 524321, 0, 196612, 524322, 0, 131076, 524323, 0, 131076, 524324, 0, 65540, 524325, 0, 196612, 524326, 0, 131077, 655359, 0, 196608, 589824, 0, 196612, 589825, 0, 65540, 589826, 0, 65540, 589827, 0, 65540, 589828, 0, 131076, 589829, 0, 131076, 589830, 0, 131076, 589831, 0, 196612, 589832, 0, 196612, 589833, 0, 196612, 589834, 0, 65540, 589835, 0, 131076, 589836, 0, 131076, 589837, 0, 196612, 589838, 0, 131076, 589839, 0, 131076, 589840, 0, 131076, 589841, 0, 65540, 589842, 0, 131076, 589843, 0, 65540, 589844, 0, 196612, 589845, 0, 131076, 589846, 0, 131076, 589847, 0, 131076, 589848, 0, 196612, 589849, 0, 131076, 589850, 0, 196612, 589851, 0, 196612, 589852, 0, 196612, 589853, 0, 131076, 589854, 0, 131076, 589855, 0, 196612, 589856, 0, 196612, 589857, 0, 65540, 589858, 0, 131076, 589859, 0, 196612, 589860, 0, 196612, 589861, 0, 131076, 589862, 0, 65541, 720895, 0, 65536, 655360, 0, 65540, 655361, 0, 65540, 655362, 0, 65540, 655363, 0, 196612, 655364, 0, 65540, 655365, 0, 65540, 655366, 0, 196612, 655367, 0, 131076, 655368, 0, 65540, 655369, 0, 196612, 655370, 0, 65540, 655371, 0, 196612, 655372, 0, 65540, 655373, 0, 196612, 655374, 0, 196612, 655375, 0, 131076, 655376, 0, 131076, 655377, 0, 131076, 655378, 0, 196612, 655379, 0, 196612, 655380, 0, 131076, 655381, 0, 65540, 655382, 0, 131076, 655383, 0, 196612, 655384, 0, 131076, 655385, 0, 65540, 655386, 0, 65540, 655387, 0, 196612, 655388, 0, 131076, 655389, 0, 196612, 655390, 0, 65540, 655391, 0, 65540, 655392, 0, 65540, 655393, 0, 131076, 655394, 0, 131076, 655395, 0, 131076, 655396, 0, 65540, 655397, 0, 196612, 655398, 0, 196613, 786431, 0, 131072, 720896, 0, 131076, 720897, 0, 131076, 720898, 0, 131076, 720899, 0, 196612, 720900, 0, 65540, 720901, 0, 65540, 720902, 0, 196612, 720903, 0, 196612, 720904, 0, 131076, 720905, 0, 196612, 720906, 0, 65540, 720907, 0, 65540, 720908, 0, 196612, 720909, 0, 131076, 720910, 0, 65540, 720911, 0, 196612, 720912, 0, 196612, 720913, 0, 196612, 720914, 0, 196612, 720915, 0, 131076, 720916, 0, 65540, 720917, 0, 196612, 720918, 0, 196612, 720919, 0, 196612, 720920, 0, 65540, 720921, 0, 196612, 720922, 0, 65540, 720923, 0, 65540, 720924, 0, 196612, 720925, 0, 65540, 720926, 0, 65540, 720927, 0, 65540, 720928, 0, 131076, 720929, 0, 131076, 720930, 0, 131076, 720931, 0, 65540, 720932, 0, 196612, 720933, 0, 65540, 720934, 0, 196613, 851967, 0, 196608, 786432, 0, 65540, 786433, 0, 65540, 786434, 0, 65540, 786435, 0, 196612, 786436, 0, 65540, 786437, 0, 65540, 786438, 0, 196612, 786439, 0, 196612, 786440, 0, 65540, 786441, 0, 196612, 786442, 0, 196612, 786443, 0, 131076, 786444, 0, 65540, 786445, 0, 196612, 786446, 0, 131076, 786447, 0, 131076, 786448, 0, 65540, 786449, 0, 65540, 786450, 0, 65540, 786451, 0, 131076, 786452, 0, 65540, 786453, 0, 131076, 786454, 0, 196612, 786455, 0, 65540, 786456, 0, 65540, 786457, 0, 65540, 786458, 0, 131076, 786459, 0, 131076, 786460, 0, 131076, 786461, 0, 65540, 786462, 0, 65540, 786463, 0, 131076, 786464, 0, 196612, 786465, 0, 131076, 786466, 0, 196612, 786467, 0, 65540, 786468, 0, 65540, 786469, 0, 65540, 786470, 0, 65541, 917503, 0, 131075, 851968, 0, 65540, 851969, 0, 196612, 851970, 0, 196612, 851971, 0, 65540, 851972, 0, 131076, 851973, 0, 65540, 851974, 0, 196612, 851975, 0, 131076, 851976, 0, 131076, 851977, 0, 131076, 851978, 0, 65540, 851979, 0, 196612, 851980, 0, 131076, 851981, 0, 65540, 851982, 0, 131076, 851983, 0, 131076, 851984, 0, 196612, 851985, 0, 65540, 851986, 0, 65540, 851987, 0, 196612, 851988, 0, 196612, 851989, 0, 65540, 851990, 0, 65540, 851991, 0, 196612, 851992, 0, 196612, 851993, 0, 131076, 851994, 0, 131076, 851995, 0, 196612, 851996, 0, 65540, 851997, 0, 65540, 851998, 0, 65540, 851999, 0, 196612, 852000, 0, 131076, 852001, 0, 65540, 852002, 0, 65540, 852003, 0, 65540, 852004, 0, 131076, 852005, 0, 65540, 852006, 0, 196613, 983039, 0, 262144, 917504, 0, 262148, 917505, 0, 262147, 917506, 0, 262147, 917507, 0, 262148, 917508, 0, 262148, 917509, 0, 262146, 917510, 0, 262146, 917511, 0, 262145, 917512, 0, 65538, 917513, 0, 262147, 917514, 0, 65538, 917515, 0, 262145, 917516, 0, 262145, 917517, 0, 262145, 917518, 0, 262146, 917519, 0, 262145, 917520, 0, 262148, 917521, 0, 262148, 917522, 0, 262146, 917523, 0, 65538, 917524, 0, 262147, 917525, 0, 262147, 917526, 0, 262145, 917527, 0, 65538, 917528, 0, 262145, 917529, 0, 65538, 917530, 0, 262146, 917531, 0, 262147, 917532, 0, 65538, 917533, 0, 262146, 917534, 0, 65538, 917535, 0, 262146, 917536, 0, 262148, 917537, 0, 65538, 917538, 0, 65538, 917539, 0, 65538, 917540, 0, 65538, 917541, 0, 262146, 917542, 0, 262149 )

[node name="road" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 8, 4, 0, 20, 4, 0, 24, 4, 0, 65548, 8, 0, 65561, 4, 0, 65566, 4, 0, 131079, 8, 0, 131081, 4, 0, 131085, 4, 0, 131091, 4, 0, 131095, 4, 0, 196611, 4, 0, 196619, 4, 0, 196622, 4, 0, 196625, 4, 0, 196632, 4, 0, 196636, 4, 0, 327679, 1, 262145, 262144, 1, 262152, 262145, 1, 262147, 262146, 1, 262146, 262147, 1, 262146, 262148, 1, 262152, 262149, 1, 262146, 262150, 1, 262146, 262151, 1, 262146, 262152, 1, 262147, 262153, 1, 262146, 262154, 1, 262146, 262155, 1, 262147, 262156, 1, 262152, 262157, 1, 262147, 262158, 1, 262147, 262159, 1, 262147, 262160, 1, 262146, 262161, 1, 262147, 262162, 1, 262146, 262163, 1, 262146, 262164, 1, 262152, 262165, 1, 262146, 262166, 1, 262147, 262167, 1, 262146, 262168, 1, 262147, 262169, 1, 262152, 262170, 1, 262146, 262171, 1, 262147, 262172, 1, 262146, 262173, 1, 262146, 262174, 1, 262147, 262175, 1, 262152, 262176, 1, 262146, 262177, 1, 262146, 262178, 1, 262153, 393215, 1, 327681, 327680, 1, 327683, 327681, 1, 65544, 327682, 1, 327683, 327683, 1, 327688, 327684, 1, 327683, 327685, 1, 65544, 327686, 1, 327683, 327687, 1, 327688, 327688, 1, 327688, 327689, 1, 327683, 327690, 1, 327688, 327691, 1, 327683, 327692, 1, 65544, 327693, 1, 65544, 327694, 1, 65544, 327695, 1, 65544, 327696, 1, 327683, 327697, 1, 327683, 327698, 1, 65544, 327699, 1, 327688, 327700, 1, 327683, 327701, 1, 65544, 327702, 1, 327683, 327703, 1, 65544, 327704, 1, 327683, 327705, 1, 327683, 327706, 1, 327688, 327707, 1, 327688, 327708, 1, 327683, 327709, 1, 327688, 327710, 1, 327683, 327711, 1, 327688, 327712, 1, 65544, 327713, 1, 65544, 327714, 1, 327684, 458751, 1, 327681, 393216, 1, 327688, 393217, 1, 327688, 393218, 1, 327688, 393219, 1, 65544, 393220, 1, 327683, 393221, 1, 65544, 393222, 1, 65544, 393223, 1, 65544, 393224, 1, 65544, 393225, 1, 65544, 393226, 1, 65544, 393227, 1, 65544, 393228, 1, 65544, 393229, 1, 327688, 393230, 1, 327683, 393231, 1, 327688, 393232, 1, 65544, 393233, 1, 65544, 393234, 1, 327688, 393235, 1, 65544, 393236, 1, 327688, 393237, 1, 327683, 393238, 1, 327683, 393239, 1, 327688, 393240, 1, 327683, 393241, 1, 65544, 393242, 1, 65544, 393243, 1, 65544, 393244, 1, 65544, 393245, 1, 65544, 393246, 1, 327688, 393247, 1, 327688, 393248, 1, 65544, 393249, 1, 65544, 393250, 1, 327689, 524287, 1, 327681, 458752, 1, 65544, 458753, 1, 65544, 458754, 1, 65544, 458755, 1, 65544, 458756, 1, 65544, 458757, 1, 327688, 458758, 1, 327688, 458759, 1, 327688, 458760, 1, 327688, 458761, 1, 65544, 458762, 1, 327683, 458763, 1, 327683, 458764, 1, 327683, 458765, 1, 327688, 458766, 1, 327683, 458767, 1, 327688, 458768, 1, 327683, 458769, 1, 327683, 458770, 1, 65544, 458771, 1, 65544, 458772, 1, 65544, 458773, 1, 327683, 458774, 1, 65544, 458775, 1, 65544, 458776, 1, 327688, 458777, 1, 327683, 458778, 1, 327688, 458779, 1, 327683, 458780, 1, 65544, 458781, 1, 65544, 458782, 1, 327683, 458783, 1, 65544, 458784, 1, 327683, 458785, 1, 327688, 458786, 1, 327689, 589823, 1, 393223, 524288, 1, 393224, 524289, 1, 393224, 524290, 1, 393224, 524291, 1, 393224, 524292, 1, 393224, 524293, 1, 393224, 524294, 1, 393224, 524295, 1, 393224, 524296, 1, 393224, 524297, 1, 393224, 524298, 1, 393224, 524299, 1, 393224, 524300, 1, 393224, 524301, 1, 393224, 524302, 1, 393224, 524303, 1, 393224, 524304, 1, 393224, 524305, 1, 393224, 524306, 1, 393224, 524307, 1, 393224, 524308, 1, 393224, 524309, 1, 393224, 524310, 1, 393224, 524311, 1, 393224, 524312, 1, 393224, 524313, 1, 393224, 524314, 1, 393224, 524315, 1, 393224, 524316, 1, 393224, 524317, 1, 393224, 524318, 1, 393224, 524319, 1, 393224, 524320, 1, 393224, 524321, 1, 393224, 524322, 1, 393225, 655364, 4, 0, 655368, 4, 0, 655378, 4, 0, 655380, 4, 0, 655387, 4, 0, 720897, 4, 0, 720917, 4, 0, 720920, 4, 0, 720926, 4, 0, 851977, 4, 0, 851985, 4, 0, 851989, 4, 0, 851995, 4, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 1, 67, 480, 67, 479, 142, 2, 142, 0, 64, -15, 65, -14, 158, 497, 155, 496, 53, 1, 49 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 48, 99 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 50, 10.0001 )
scale = Vector2( 0.203252, 0.268816 )
current = true
zoom = Vector2( 0.3, 0.3 )
limit_left = 0
limit_top = 0
limit_right = 500
limit_bottom = 225
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Camera2D"]

[node name="PopupDialog" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 5 )]

[node name="Hint" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 6 )]

[node name="WeaponFrame" type="TextureRect" parent="Player/Camera2D/CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = -134.0
margin_right = 55.0
margin_bottom = -102.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 9 )

[node name="Machado" parent="Player/Camera2D/CanvasLayer/WeaponFrame" instance=ExtResource( 8 )]
margin_left = 8.25
margin_top = 10.25
margin_right = 8.25
margin_bottom = 10.25
rect_scale = Vector2( 0.2, 0.2 )

[node name="DimensionFrame" type="TextureRect" parent="Player/Camera2D/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_right = -48.0
margin_bottom = 32.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 10 )

[node name="Roadmap" type="Sprite" parent="Player/Camera2D/CanvasLayer/DimensionFrame"]
position = Vector2( 8, 8 )
scale = Vector2( 0.0266667, 0.0340425 )
texture = ExtResource( 4 )
centered = false

[node name="Label" type="Label" parent="Player/Camera2D/CanvasLayer/DimensionFrame"]
margin_top = 25.0
margin_right = 45.0
margin_bottom = 38.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
text = "Visão"
align = 1
valign = 1
autowrap = true

[node name="PopupPause" parent="Player/Camera2D/CanvasLayer" instance=ExtResource( 3 )]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196598, 5, 0, -65537, 5, 0, -131068, 5, 0, -131066, 5, 0, -131060, 5, 0, -2, 5, 0, -65534, 5, 0, -65532, 5, 0, -65528, 5, 0, -65523, 5, 0, -65521, 5, 0, 19, 9, 0, 21, 7, 0, 22, 6, 0, 28, 6, 0, 65556, 6, 0, 65559, 9, 0, 65562, 7, 0, 131075, 7, 0, 131097, 6, 0, 131101, 7, 0, 458755, 5, 0, 458761, 5, 0, 524288, 5, 0, 524293, 5, 0, 524302, 5, 0, 655357, 5, 0, 589832, 5, 0, 589835, 5, 0, 589843, 7, 0, 589847, 6, 0, 655362, 5, 0, 655388, 7, 0, 786431, 5, 0, 720901, 5, 0, 720905, 5, 0, 720909, 5, 0, 720915, 6, 0, 720922, 8, 0, 786454, 7, 0, 786457, 6, 0, 786460, 6, 0, 786461, 9, 0, 851971, 8, 0, 851973, 7, 0, 851981, 7, 0, 851986, 7, 0, 851994, 9, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 199.5, 104 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 447, 104.5 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0
autoplay = true

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="area_shape_entered" from="Area2D2" to="." method="_on_Area2D2_area_shape_entered"]
